# RemoveBooksDRM

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  decrypt.sh  injected.m  obfuscated.h
src/: drm.h  drm.m  main.m  main.mm  rdrm.h  rdrm.m  util.h  util.m
